--- a/index.html
+++ b/index.html
@@ -1,20 +1,11 @@
 <!doctype html>
-<!--
-COPYRIGHT by HighHay/Mivfx
-Before using this theme, you should accept themeforest licenses terms.
-http://themeforest.net/licenses
--->
-
-<html class="no-js" lang="en">
-    
-<!-- Mirrored from highhay.com/demos/timex/index-logo.html by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 24 Aug 2016 06:28:35 GMT -->
-<!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=utf-8" /><!-- /Added by HTTrack -->
+<html class="no-js" lang="en">    
+<meta http-equiv="content-type" content="text/html;charset=utf-8" />
 <head>
         <meta http-equiv="content-type" content="text/html; charset=UTF-8">
         <meta charset="utf-8">
-
-        <!-- Page Title Here -->
-        <title>Timex - Landing page Coming Soon responsive template</title>
+        
+        <title>Solfitec::Home</title>
 		
         <!-- Page Description Here -->
 		<meta name="description" content="A responsive coming soon template, un template HTML pour une page en cours de construction">
